WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268719
[WebGPU] Device should not inherit from both CanMakeWeakPtr and ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr
https://bugs.webkit.org/show_bug.cgi?id=268719
Summary
[WebGPU] Device should not inherit from both CanMakeWeakPtr and ThreadSafeRef...
Mike Wyrzykowski
Reported
2024-02-04 13:41:15 PST
[WebGPU] Device should not inherit from both CanMakeWeakPtr and ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-04 13:41:27 PST
radar://122254591
Mike Wyrzykowski
Comment 2
2024-02-04 13:50:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23836
EWS
Comment 3
2024-02-04 16:24:03 PST
Committed
274081@main
(0e04da7846ec): <
https://commits.webkit.org/274081@main
> Reviewed commits have been landed. Closing PR #23836 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug