WebGPU::Device should not inherit from both CanMakeWeakPtr and ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr https://bugs.webkit.org/show_bug.cgi?id=268719 <radar://122254591>

Reviewed by Cameron McCormack.

Device is used as a ThreadSafeWeakPtr in one place (Queue.h)
but there are zero uses of WeakPtr<Device>, so we can remove
the inheritance from CanMakeWeakPtr.

* Source/WebGPU/WebGPU/Device.h:

Canonical link: https://commits.webkit.org/274081@main